Update rpg-actions.yml adding test coverage

--- a/.github/workflows/rpg-actions.yml
+++ b/.github/workflows/rpg-actions.yml
@@ -40,7 +40,9 @@ jobs:
 
       - name: Test with unittest
         run: |
-          pipenv run python3 -m unittest discover -s test
+          pipenv shell
+          coverage run python3 -m unittest discover -s test
+          coverage report
 
   merge-to-master:
     runs-on: ubuntu-latest
