--- a/.github/workflows/rpg-actions.yml
+++ b/.github/workflows/rpg-actions.yml
@@ -40,7 +40,7 @@ jobs:
 
       - name: Test with unittest
         run: |
-          pipenv shell
+          run pipenv shell
           coverage run python3 -m unittest discover -s test
           coverage report
 
