--- a/.github/workflows/rpg-actions.yml
+++ b/.github/workflows/rpg-actions.yml
@@ -40,8 +40,9 @@ jobs:
 
       - name: Test with unittest
         run: |
-          pipenv run coverage run python3 -m unittest discover -s test
-          pipenv run coverage report
+          pipenv run coverage run -m unittest discover -s test
+          pipenv run coverage report --fail-under=80 --skip-covered
+          pipenv run coverage report -m
 
   merge-to-master:
     runs-on: ubuntu-latest
