--- a/.github/workflows/rpg-actions.yml
+++ b/.github/workflows/rpg-actions.yml
@@ -27,9 +27,9 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install flake8 pytest
           pip install pipenv
-          pipenv install
+          pip install flake8 pytest pytest-cov mutmut
+          pipenv install --dev
 
       - name: Lint with flake8
         run: |
@@ -38,10 +38,15 @@ jobs:
           # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
           flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
 
-      - name: Test with unittest
+      - name: Test with pytest
+        env:
+          PYTHONPATH: ${{ github.workspace }}/src
         run: |
-          pipenv run coverage run -m unittest discover -s test
-          pipenv run coverage report --fail-under=80 --skip-covered
+          pipenv run pytest --cov=src --cov-report=term-missing --cov-fail-under=80
+
+      - name: Run mutation tests with mutmut
+        run: |
+          pipenv run mutmut run
 
   merge-to-master:
     runs-on: ubuntu-latest
